# prc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RESUME.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_a.py  real_bugs.py  run_real_bugs.py  vanilla_control.py
benchmarks/data/: sample_20.json
benchmarks/fixtures/: error_swallow_01.json  error_swallow_02.json  null_path_01.json  null_path_02.json  off_by_one_01.json  off_by_one_02.json  resource_leak_01.json  resource_leak_02.json  type_confusion_01.json  type_confusion_02.json
benchmarks/results/: combined-2026-05-26T212747Z.json  real-bugs-2026-05-26.md  real-bugs-2026-05-26T211643Z.json  vanilla-fp-2026-05-26T214030Z.json
src/prc/: __init__.py  cli.py  diff.py  llm.py  pipeline.py  verdict.py
src/prc/output/: json_out.py  markdown.py
src/prc/phases/: __init__.py  correctness.py  understand.py  verdict.py
tests/: test_cli.py  test_diff.py  test_llm.py  test_pipeline.py  test_verdict.py
